# squares

./: README.md  pyproject.toml
squares/: __init__.py  admm.py  anneal.py  squares.py  timeit.py
