[tool.poetry]
name = "squares"
version = "0.1.0"
description = ""
authors = ["Victor S. Miller <victorsmiller@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sympy = "^1.11.1"
python-sat = "^0.1.8.dev2"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
